# todomgr

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: i18n.h  main.cpp  modfile.c  modfile.h  modi18n.c  modi18n.h  modinter.c  modinter.h  modview.cpp  modview.hpp  placeholder.cpp
